--- a/LBW/Views/Shared/_Layout.cshtml
+++ b/LBW/Views/Shared/_Layout.cshtml
@@ -13,8 +13,14 @@
     <link href="~/dist/css/demo.min.css?1692870487" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/Site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/Barrick.css" asp-append-version="true" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js"></script>
     <script src="~/js/vendor.js" asp-append-version="true"></script>        
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js"></script> 
+    <!--Excel-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.4.0/polyfill.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/exceljs/4.2.0/exceljs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+    <!--Pdf-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.0.0/jspdf.umd.min.js"></script>
     <!-- Agrega tus otros archivos CSS aquí -->
     <style>
         :root {
