--- a/LBW/Views/Shared/_Layout.cshtml
+++ b/LBW/Views/Shared/_Layout.cshtml
@@ -204,6 +204,41 @@
                         </a>
                     </li>
 
+                  @*   <li class="nav-item @ViewBag.au">
+                        <a asp-controller="Auditoria" asp-action="AuditoriaV" class="nav-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-text-ai" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#a79a66" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+                                <path d="M10 21h-3a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v3.5" />
+                                <path d="M9 9h1" />
+                                <path d="M9 13h2.5" />
+                                <path d="M9 17h1" />
+                                <path d="M14 21v-4a2 2 0 1 1 4 0v4" />
+                                <path d="M14 19h4" />
+                                <path d="M21 15v6" />
+                            </svg>
+                            <span class="nav-link-title" style="margin-left:1rem; align-items:center;">
+                                Auditoria del Cliente
+                            </span>
+                        </a>
+                    </li> *@
+
+                    <li class="nav-item @ViewBag.info">
+                        <a asp-controller="Informes" asp-action="Informes4" class="nav-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-table-export" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#a79a66" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M12.5 21h-7.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5" />
+                                <path d="M3 10h18" />
+                                <path d="M10 3v18" />
+                                <path d="M16 19h6" />
+                                <path d="M19 16l3 3l-3 3" />
+                            </svg>
+                            <span class="nav-link-title" style="margin-left:1rem; align-items:center;">
+                                Exportar Informes
+                            </span>
+                        </a>
+                    </li>
+
                     <li class="nav-item @ViewBag.perfil">
                         <a asp-controller="PerfilUsuario" asp-action="Perfil" class="nav-link">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#A79A66" fill="none" stroke-linecap="round" stroke-linejoin="round">
